# sts2-rl

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
configs/benchmarks/: combat-suite.example.toml  fixed-seed-strategic-suite.example.toml
configs/dags/: predictor-promotion.example.toml
docs/: architecture.md  bringup.md  custom-seed-benchmark-protocol.md  mod-baseline.md  public-release-checklist.md  registry.md  roadmap.md
scripts/: run-local-single.ps1  run-runtime-job.ps1  start-sts2-instance.ps1
src/sts2_rl/: cli.py  (+6 more)
tests/: predict_report_fixtures.py  registry_fixtures.py  shadow_fixtures.py  test_behavior_cloning.py  test_benchmark.py  test_candidate_actions.py  test_cli_behavior_cloning.py  test_cli_benchmark_suite.py  test_cli_capability.py  test_cli_community.py  test_cli_dataset.py  test_cli_divergence.py  test_cli_live_contract.py  test_cli_offline_cql.py  test_cli_policy_pack.py  test_cli_predict_reports.py  test_cli_public_runs.py  test_cli_public_runs_normalize.py  test_cli_registry.py  test_cli_runtime_dag.py  test_cli_shadow.py  test_cli_strategic_finetune.py  test_cli_strategic_pretrain.py  test_client.py  test_collect_community_prior.py  test_collect_policy.py  test_collect_runner.py  test_custom_run_prepare.py  test_data_community.py  test_data_dataset.py  test_data_offline_rl_dataset.py  test_data_public_run_normalized.py  test_data_public_runs.py  test_data_public_strategic_decisions.py  test_env_wrapper.py  test_game_run_contract.py  test_launch_plan.py  test_offline_cql.py  test_policy_checkpoint.py  test_ports.py  (+31 more)
(+133 files in other folders)
